overlays/prod/deployment-bastion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: john2143-com
spec:
  template:
    spec:
      containers:
      - name: bastion-minio
        $patch: delete
      - name: bastion-pruner
        image: ghcr.io/john2143/better_gha_runner:latest
        command:
        - "fish"
        - "--debug=-error,-warning-path"
        - "-c"
        - |
          while true;
            /scripts/prune.fish '1440';
            sleep 60;
          end
        volumeMounts:
        - name: data-volume
          mountPath: /data/juushFiles/
        - name: upload-fish
          mountPath: /scripts/
