overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: john2143-com
spec:
  template:
    spec:
      containers:
      - name: john2143-com
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailscale-exit
spec:
  template:
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: pool-medium
