overlays/prod/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: john2143-com
patch:
  spec:
    template:
      spec:
        volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: files-pvc

        containers:
        - name: john2143-com
          volumeMounts:
            mountPath: /app/juushFiles
            name: data-volume
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  template:
    spec:
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: files-pvc
      containers:
      - name: john2143-com
        volumeMounts:
          - mountPath: /data/db
            name: data-volume
