overlays/prod/spire-server-patch.yaml
# Strategic merge patch to add SPIRE controller manager container to statefulset
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: spire-server
  namespace: spire-server
spec:
  template:
    spec:
      containers:
      - name: spire-controller-manager
        image: ghcr.io/spiffe/spire-controller-manager:0.6.6
        imagePullPolicy: IfNotPresent
        args:
        - --config=controller-manager-config.yaml
        ports:
        - containerPort: 9443
          name: https
          protocol: TCP
        - containerPort: 8083
          name: hp-cm
          protocol: TCP
        - containerPort: 8082
          name: pm-cm
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: hp-cm
            scheme: HTTP
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /readyz
            port: hp-cm
            scheme: HTTP
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /tmp/spire-server/private
          name: spire-server-socket
          readOnly: true
        - mountPath: /controller-manager-config.yaml
          name: controller-manager-config
          readOnly: true
          subPath: controller-manager-config.yaml
        - mountPath: /tmp
          name: spire-controller-manager-tmp
          subPath: spire-controller-manager
      volumes:
      - name: controller-manager-config
        configMap:
          name: spire-controller-manager
