overlays/prod/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: apps-gateway
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
spec:
  listeners:
  # certs are renewed via http challenge
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same

  #- name: https-christmas
    #hostname: 2143.christmas
    #port: 443
    #protocol: HTTPS
    #allowedRoutes:
      #namespaces:
        #from: Same
    #tls:
      #mode: Terminate
      #certificateRefs:
      #- kind: Secret
        #name: 2143-christmas-tls-key-prod
        #namespace: default
  #- name: https-christmas-all
    #hostname: "*.2143.christmas"
    #port: 443
    #protocol: HTTPS
    #allowedRoutes:
      #namespaces:
        #from: Same
    #tls:
      #mode: Terminate
      #certificateRefs:
      #- kind: Secret
        #name: 2143-christmas-tls-key-prod
        #namespace: default


  #- name: https-baby
    #hostname: 2143.baby
    #port: 443
    #protocol: HTTPS
    #allowedRoutes:
      #namespaces:
        #from: Same
    #tls:
      #mode: Terminate
      #certificateRefs:
      #- kind: Secret
        #name: 2143-baby-tls-key-prod
        #namespace: default
  #- name: https-baby-all
    #hostname: "*.2143.baby"
    #port: 443
    #protocol: HTTPS
    #allowedRoutes:
      #namespaces:
        #from: Same
    #tls:
      #mode: Terminate
      #certificateRefs:
      #- kind: Secret
        #name: 2143-baby-tls-key-prod
        #namespace: default

  - name: 2143.moe
    hostname: 2143.moe
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: 2143-moe-tls-key-prod
        namespace: default
  - name: 2143.moe-all
    hostname: "*.2143.moe"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: 2143-moe-tls-key-prod
        namespace: default


  - name: up-brick-gay
    hostname: up.brick.gay
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: up-brick-gay-tls-key-prod
        namespace: default
  - name: i-brick-gay
    hostname: i.brick.gay
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: i-brick-gay-tls-key-prod
        namespace: default
  - name: i-dsstar-us
    hostname: i.dsstar.us
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: i-dsstar-us-tls-key-prod
        namespace: default

  #- name: ewan-m
    #hostname: "m.ewan.green"
    #port: 443
    #protocol: HTTPS
    #allowedRoutes:
      #namespaces:
        #from: Same
    #tls:
      #mode: Terminate
      #certificateRefs:
      #- kind: Secret
        #name: ewan-green-tls-key-prod
        #namespace: default

  - name: https-gay
    hostname: "2143.gay"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: 2143-gay-tls-key-prod
        namespace: default
  - name: https-gay-all
    hostname: "*.2143.gay"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: 2143-gay-tls-key-prod
        namespace: default

  - name: 2143.me
    hostname: 2143.me
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: 2143-me-tls-key-prod
        namespace: default
  - name: 2143.me-all
    hostname: "*.2143.me"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: 2143-me-tls-key-prod
        namespace: default

  - name: john2143.com-prod
    hostname: "prod.john2143.com"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: john2143-com-tls-key-prod
        namespace: default

  - name: 9s.pics
    hostname: 9s.pics
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: 9s.pics-tls-key-prod
        namespace: default
  - name: 9s.pics-all
    hostname: "*.9s.pics"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: 9s.pics-tls-key-prod
        namespace: default

  - name: 0x2b.pics
    hostname: 0x2b.pics
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: 0x2b.pics-tls-key-prod
        namespace: default
  - name: 0x2b.pics-all
    hostname: "*.0x2b.pics"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: 0x2b.pics-tls-key-prod
        namespace: default

  - name: devolved-us
    hostname: devolved.us
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: devolved-us-tls-key-prod
        namespace: default
  - name: devolved-us-all
    hostname: "*.devolved.us"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: devolved-us-tls-key-prod
        namespace: default

  - name: openfront.pro
    hostname: "openfront.pro"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: openfront-pro-tls-key-prod
        namespace: default
  - name: openfront.pro-all
    hostname: "*.openfront.pro"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: openfront-pro-tls-key-prod
        namespace: default

  - name: poe-sale
    hostname: poe.sale
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: poe-sale-tls-key-prod
        namespace: default

  #- name: poe2-sale
    #hostname: poe2.sale
    #port: 443
    #protocol: HTTPS
    #allowedRoutes:
      #namespaces:
        #from: Same
    #tls:
      #mode: Terminate
      #certificateRefs:
      #- kind: Secret
        #name: poe2-sale-tls-key-prod
        #namespace: default


  - name: mongo-proxy
    port: 4040
    protocol: TCP
    allowedRoutes:
      namespaces:
        from: Same
