overlays/prod/deployment-redirector.yaml
# This file contains the deployment and service configuration for both poe.sale
# and poe2.sale redirectors.
#
######################################
# PoE1 Sale Redirector
######################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app poe-sale-redirector
  namespace: default
spec:
  selector:
    matchLabels:
      app: *app
  template:
    metadata:
      labels:
        app: *app
        servicegroup: "mine"
    spec:
      containers:
      - name: redirector
        image: zappi/redirector
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: poe-sale-redirector
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: poe-sale-redirector
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: poe-sale-redirector
  namespace: default
spec:
  parentRefs:
  - name: apps-gateway
    #sectionName: https
  hostnames:
  - "poe.sale"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      # name of the service
    - name: poe-sale-redirector
      port: 80
      namespace: default
---

######################################
# PoE2 Sale Redirector
######################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app poe2-sale-redirector
  namespace: default
spec:
  selector:
    matchLabels:
      app: *app
  template:
    metadata:
      labels:
        app: *app
        servicegroup: "mine"
    spec:
      containers:
      - name: redirector
        image: zappi/redirector
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: poe2-sale-redirector
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: poe2-sale-redirector
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: poe2-sale-redirector
  namespace: default
spec:
  parentRefs:
  - name: apps-gateway
    #sectionName: https
  hostnames:
  - "poe2.sale"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      # name of the service
    - name: poe2-sale-redirector
      port: 80
      namespace: default
