overlays/prod/grafana-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana.external
  namespace: default
spec:
  parentRefs:
  - name: apps-gateway
  hostnames:
  - "grafana.2143.me"
  - "grafana.2143.moe"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      # name of the service
    - name: grafana
      port: 80
      namespace: default
---
