overlays/prod/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: john2143-com-normal
spec:
  parentRefs:
  - name: apps-gateway
  #- name: apps-gateway-nonprod
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: john2143-com-i-prefix
spec:
  parentRefs:
  - name: apps-gateway
  #- name: apps-gateway-nonprod
